--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -72,6 +73,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -115,6 +117,46 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "ngx-bit": {
+      "root": "projects/ngx-bit",
+      "sourceRoot": "projects/ngx-bit/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-bit/tsconfig.lib.json",
+            "project": "projects/ngx-bit/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/ngx-bit/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-bit/src/test.ts",
+            "tsConfig": "projects/ngx-bit/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-bit/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-bit/tsconfig.lib.json",
+              "projects/ngx-bit/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
