--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ngx-bit": [
+        "dist/ngx-bit"
+      ],
+      "ngx-bit/*": [
+        "dist/ngx-bit/*"
+      ]
+    }
   }
 }
