--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ngx-bit",
-  "version": "0.0.1",
+  "version": "0.8.0",
   "peerDependencies": {
-    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "*",
+    "@angular/core": "*",
+    "@ngx-pwa/local-storage": "*"
   }
 }
