--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,17 +1,29 @@
 {
   "name": "ngx-bit",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "license": "MIT",
+  "peerDependencies": {
+    "@angular/common": "*",
+    "@angular/core": "*",
+    "@ngx-pwa/local-storage": "*",
+    "sweetalert2": "*"
+  },
   "keywords": [
     "Angular",
     "Ng-Zorro",
     "RESTFul Tools",
     "enhancement"
   ],
-  "peerDependencies": {
-    "@angular/common": "*",
-    "@angular/core": "*",
-    "@ngx-pwa/local-storage": "*",
-    "sweetalert2": "*"
-  }
+  "author": {
+    "name": "kain",
+    "email": "zhangtqx@vip.qq.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kainonly/ngx-bit.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kainonly/ngx-bit/issues"
+  },
+  "homepage": "https://kainonly.github.io/ngx-bit"
 }
