--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-bit-projects": {
+    "ngx-bit-demo": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngx-bit-projects",
+            "outputPath": "dist/ngx-bit-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -51,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-bit-projects:build"
+            "browserTarget": "ngx-bit-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-bit-projects:build:production"
+              "browserTarget": "ngx-bit-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-bit-projects:build"
+            "browserTarget": "ngx-bit-demo:build"
           }
         },
         "test": {
@@ -73,7 +72,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -97,7 +95,7 @@
         }
       }
     },
-    "ngx-bit-projects-e2e": {
+    "ngx-bit-demo-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -105,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-bit-projects:serve"
+            "devServerTarget": "ngx-bit-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngx-bit-projects:serve:production"
+              "devServerTarget": "ngx-bit-demo:serve:production"
             }
           }
         },
@@ -135,11 +133,6 @@
           "options": {
             "tsConfig": "projects/ngx-bit/tsconfig.lib.json",
             "project": "projects/ngx-bit/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/ngx-bit/ng-package.prod.json"
-            }
           }
         },
         "test": {
@@ -165,5 +158,5 @@
       }
     }
   },
-  "defaultProject": "ngx-bit-projects"
+  "defaultProject": "ngx-bit-demo"
 }
