--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-bit",
-  "version": "1.8.0",
+  "version": "1.8.0-alpha.0",
   "license": "MIT",
   "peerDependencies": {
     "@angular/common": "*",
