--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-bit",
-  "version": "1.8.0-alpha.5",
+  "version": "1.8.1",
   "license": "MIT",
   "peerDependencies": {
     "@angular/common": "*",
@@ -9,10 +9,9 @@
     "sweetalert2": "*"
   },
   "keywords": [
-    "Angular",
-    "Ng-Zorro",
-    "RESTFul Tools",
-    "enhancement"
+    "angular",
+    "ng-zorro",
+    "ngx"
   ],
   "author": {
     "name": "kain",
