--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "ng serve",
     "build": "ng build ngx-bit",
     "release": "cd dist/ngx-bit && npm publish",
+    "build:docs": "ng build --prod --buildOptimizer",
     "docs": "docsify serve ./docs"
   },
   "private": true,
