--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       ],
       "ngx-bit/*": [
         "dist/ngx-bit/*"
+      ],
+      "dev-ngx-bit": [
+        "projects/ngx-bit/src/public_api.ts"
       ]
     }
   }
