--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-pwa/local-storage": "^6.2.0",
     "core-js": "^2.5.4",
     "ng-zorro-antd": "^1.8.0",
+    "ngx-markdown": "^7.1.3",
     "rxjs": "^6.3.3",
     "sweetalert2": "^7.26.28",
     "zone.js": "~0.8.26"
