--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "~2.9.2",
+    "uuid": "^3.3.2"
   }
 }
