--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-bit-live",
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --disable-host-check",
+    "start": "ng serve --host 0.0.0.0 --disableHostCheck",
     "docs": " docsify serve ./docs",
     "build": "ng build ngx-bit",
     "release": "cd dist/ngx-bit && npm publish"
