--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "ngx-bit-live",
+  "name": "ngx-bit",
   "scripts": {
-    "start": "ng serve",
-    "start:open": "ng serve --host 0.0.0.0 --disableHostCheck",
     "docs": " docsify serve ./docs",
     "build": "ng build ngx-bit",
     "release": "cd dist/ngx-bit && npm publish"
