--- a/package.json
+++ b/package.json
@@ -1,51 +1,28 @@
 {
   "name": "ngx-bit",
-  "scripts": {
-    "docs": " docsify serve ./docs",
-    "build": "ng build ngx-bit",
-    "release": "cd dist/ngx-bit && npm publish"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+  "version": "7.2.3",
+  "peerDependencies": {
+    "@angular/common": "^7.2.0",
+    "@angular/core": "^7.2.0",
     "@ngx-pwa/local-storage": "^7.4.2",
-    "core-js": "^2.5.4",
-    "ng-zorro-antd": "^7.0.1",
-    "rxjs": "~6.3.3",
-    "sweetalert2": "^8.2.6",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "sweetalert2": "^8.2.6"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.4",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+  "keywords": [
+    "angular",
+    "ng-zorro",
+    "ngx"
+  ],
+  "author": {
+    "name": "kain",
+    "email": "zhangtqx@vip.qq.com"
+  },
+  "license": "MIT",
+  "homepage": "https://ngx-bit.kain.net.cn",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kainonly/ngx-bit.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kainonly/ngx-bit/issues"
   }
 }
