--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/lib",
+    "outDir": "../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
     "moduleResolution": "node",
@@ -26,7 +26,7 @@
     "enableResourceInlining": true
   },
   "exclude": [
-    "test.ts",
-    "*.spec.ts"
+    "src/test.ts",
+    "**/*.spec.ts"
   ]
 }
