--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "email": "zhangtqx@vip.qq.com"
   },
   "license": "MIT",
-  "homepage": "https://ngx-bit.kain.net.cn",
+  "homepage": "https://ngx-bit.kainonly.com",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kainonly/ngx-bit.git"
