--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ngx-bit",
-  "version": "8.9.1",
+  "version": "9.0.0",
   "peerDependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@ngx-pwa/local-storage": "^8.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@ngx-pwa/local-storage": "^9.0.0",
+    "ng-zorro-antd": "^9.0.0",
     "sweetalert2": "^9.0.0",
     "ajv": "^6.0.0"
   },
