--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ngx-bit",
   "version": "9.0.0",
-  "peerDependencies": {
-    "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
+  "dependencies": {
     "@ngx-pwa/local-storage": "^9.0.0",
     "ng-zorro-antd": "^9.0.0",
     "sweetalert2": "^9.0.0",
     "ajv": "^6.0.0"
+  },
+  "peerDependencies": {
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "tslib": "^1.10.0"
   },
   "keywords": [
     "angular",
