完善与优化

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -9,7 +9,9 @@
     "lib": [
       "dom",
       "es2018"
-    ]
+    ],
+    "paths": {
+    }
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
