完善与优化

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -5,12 +5,16 @@
     "target": "es2015",
     "declaration": true,
     "inlineSources": true,
-    "types": [],
+    "types": [
+    ],
     "lib": [
       "dom",
       "es2018"
     ]
   },
+  "include": [
+    "./**/*.ts"
+  ],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
