--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,8 @@
           "options": {
             "main": "projects/ngx-bit/test.ts",
             "tsConfig": "projects/ngx-bit/tsconfig.spec.json",
-            "karmaConfig": "projects/ngx-bit/karma.conf.js"
+            "karmaConfig": "projects/ngx-bit/karma.conf.js",
+            "codeCoverage": true
           }
         },
         "lint": {
