--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --port 4201 --disableHostCheck",
     "build": "ng build --prod",
-    "test:ngx-bit": "ng test ngx-bit --no-watch",
     "build:ngx-bit": "ng build ngx-bit --prod",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
-    "test": "ng test",
+    "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
