--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --port 4201 --disableHostCheck",
     "build": "ng build --prod",
-    "build:ngx-bit": "ng build ngx-bit --prod",
+    "build:ngx-bit": "ng build ngx-bit --prod && npm run build:schematics && npm run postbuild",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
+    "build:schematics": "./node_modules/.bin/tsc -p projects/ngx-bit/tsconfig.schematics.json",
+    "copy:schemas": "cpy --parents projects/ngx-bit/schematics/*/schema.json dist/ngx-bit/",
+    "copy:collection": "cpy projects/ngx-bit/schematics/collection.json dist/ngx-bit/schematics",
+    "postbuild": "npm run copy:schemas && npm run copy:collection",
     "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -39,6 +43,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "coveralls": "^3.1.0",
+    "cpy-cli": "^3.1.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
