--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-bit",
   "version": "9.1.0",
+  "schematics": "./schematics/collection.json",
   "dependencies": {
     "@ngx-pwa/local-storage": "^9.0.0",
     "ng-zorro-antd": "^9.0.0",
