--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ cache:
 install:
   - npm install
 
+before_script:
+  - "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
 script:
   - npm run test
 after_success:
