--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -6,12 +6,12 @@
     "@ngx-pwa/local-storage": "^9.0.0",
     "ng-zorro-antd": "^9.0.0",
     "sweetalert2": "^9.0.0",
-    "ajv": "^6.0.0"
+    "ajv": "^6.0.0",
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "tslib": "^1.10.0"
+    "@angular/core": "^9.0.0"
   },
   "keywords": [
     "angular",
