--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,11 @@
               "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "ajv",
+              "@ant-design/colors"
+            ]
           },
           "configurations": {
             "production": {
