--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "~10.1.5",
     "@angular/service-worker": "~10.1.5",
     "@ngx-pwa/local-storage": "^10.1.0",
-    "ajv": "^6.12.0",
+    "ajv": "^7.0.0-beta.1",
     "ng-zorro-antd": "^10.0.1",
     "rxjs": "~6.6.3",
     "sweetalert2": "^10.0.0",
