--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -6,7 +6,7 @@
     "@ngx-pwa/local-storage": "^10.0.0",
     "ng-zorro-antd": "^10.0.0",
     "sweetalert2": "^10.0.0",
-    "ajv": "^6.0.0",
+    "ajv": "^7.0.0-beta.1",
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
