--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ngx-bit",
-  "version": "10.0.3",
+  "version": "10.0.4",
   "schematics": "./schematics/collection.json",
   "dependencies": {
     "@ngx-pwa/local-storage": "^10.0.0",
     "ng-zorro-antd": "^10.0.0",
     "sweetalert2": "^10.0.0",
-    "ajv": "^7.0.0-beta.1",
+    "ajv": "^6.0.0",
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
