update github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
       - run: npm install
-      - run: "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
       - run: npm test
-      - run: cat ./coverage/lcov.info | coveralls
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./coverage/lcov.info
