--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -6,8 +6,7 @@
     "@ngx-pwa/local-storage": "^11.0.0",
     "ng-zorro-antd": "^11.0.0",
     "sweetalert2": "^10.0.0",
-    "ajv": "^6.0.0",
-    "tslib": "^2.0.0"
+    "ajv": "^6.0.0"
   },
   "peerDependencies": {
     "@angular/common": "^11.0.0",
