--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@angular/router": "~11.0.5",
     "@angular/service-worker": "~11.0.5",
     "@ngx-pwa/local-storage": "^11.0.2",
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.0",
+    "ajv-formats": "^1.5.1",
     "ng-zorro-antd": "^11.0.0",
     "rxjs": "~6.6.3",
     "sweetalert2": "^10.0.0",
