--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ngx-bit",
-  "version": "11.0.1",
+  "version": "11.0.2",
   "schematics": "./schematics/collection.json",
   "dependencies": {
     "@ngx-pwa/local-storage": "^11.0.0",
     "ng-zorro-antd": "^11.0.0",
     "sweetalert2": "^10.0.0",
-    "ajv": "^6.0.0"
+    "ajv": "^7.0.0",
+    "ajv-formats": "^1.0.0"
   },
   "peerDependencies": {
     "@angular/common": "^11.0.0",
