--- a/angular.json
+++ b/angular.json
@@ -92,11 +92,7 @@
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/ngx-bit/tsconfig.lib.json",
-            "project": "projects/ngx-bit/ng-package.json",
-            "allowedCommonJsDependencies": [
-              "ajv",
-              "ajv-formats"
-            ]
+            "project": "projects/ngx-bit/ng-package.json"
           },
           "configurations": {
             "production": {
