--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "start": "ng serve --host 0.0.0.0 --port 4201 --disableHostCheck",
     "build": "ng build --prod",
     "build:ngx-bit": "ng build ngx-bit --prod && npm run build:schematics && npm run postbuild",
-    "build:lab-skeleton": "ng build lab-skeleton --prod",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
     "build:schematics": "./node_modules/.bin/tsc -p projects/ngx-bit/tsconfig.schematics.json",
     "copy:schemas": "cpy --parents projects/ngx-bit/schematics/*/schema.json dist/ngx-bit/",
     "copy:collection": "cpy projects/ngx-bit/schematics/collection.json dist/ngx-bit/schematics",
     "postbuild": "npm run copy:schemas && npm run copy:collection",
+    "build:lab-skeleton": "ng build lab-skeleton --prod",
+    "release:lab-skeleton": "cd dist/lab-skeleton && npm publish",
     "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
