--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             "scripts": [],
             "allowedCommonJsDependencies": [
               "ajv",
-              "ajv-formats"
+              "ajv-formats",
+              "tsparticles"
             ]
           },
           "configurations": {
