--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@angular/service-worker": "~11.0.5",
     "@ngx-pwa/local-storage": "^11.0.2",
     "merge": "^2.1.1",
+    "ng-particles": "^2.3.1",
     "ng-zorro-antd": "^11.0.0",
-    "ngx-perfect-scrollbar": "^10.1.0",
     "rxjs": "~6.6.3",
     "sweetalert2": "^10.0.0",
     "tslib": "^2.0.0",
