--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@angular/service-worker": "~11.2.7",
     "@ngx-pwa/local-storage": "^11.1.0",
     "merge": "^2.1.1",
-    "ng-particles": "^2.3.1",
+    "ng-particles": "^2.7.2",
     "ng-zorro-antd": "^11.3.0",
     "rxjs": "~6.6.7",
     "sweetalert2": "^10.0.0",
     "tslib": "^2.0.0",
+    "tsparticles": "^1.24.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
