--- a/tsconfig.json
+++ b/tsconfig.json
@@ -78,6 +78,9 @@
       ],
       "van-skeleton/log": [
         "projects/lab-skeleton/log/public-api.ts"
+      ],
+      "van-skeleton/media": [
+        "projects/lab-skeleton/media/public-api.ts"
       ]
     }
   }
