--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@angular/language-service": "~11.2.7",
+    "@types/howler": "^2.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
