--- a/tsconfig.json
+++ b/tsconfig.json
@@ -87,6 +87,9 @@
       ],
       "van-skeleton/media": [
         "projects/lab-skeleton/media/public-api.ts"
+      ],
+      "ngx-howler": [
+        "projects/ngx-howler/src/public-api.ts"
       ]
     }
   }
