--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "copy:schemas": "cpy --parents projects/ngx-bit/schematics/*/schema.json dist/ngx-bit/",
     "copy:collection": "cpy projects/ngx-bit/schematics/collection.json dist/ngx-bit/schematics",
     "postbuild": "npm run copy:schemas && npm run copy:collection",
-    "build:lab-skeleton": "ng build lab-skeleton --prod",
-    "release:lab-skeleton": "cd dist/lab-skeleton && npm publish",
+    "build:framework": "ng build framework --prod",
+    "release:framework": "cd dist/framework && npm publish --access=public",
     "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
