--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -19,7 +19,7 @@
     "email": "zhangtqx@vip.qq.com"
   },
   "license": "MIT",
-  "homepage": "https://ngx-bit.kainonly.com",
+  "homepage": "https://doc.kainonly.com/#/ngx-bit/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kainonly/ngx-bit.git"
