--- a/projects/ngx-bit/package.json
+++ b/projects/ngx-bit/package.json
@@ -1,13 +1,17 @@
 {
   "name": "ngx-bit",
-  "version": "11.3.2",
+  "version": "11.4.0",
   "schematics": "./schematics/collection.json",
   "dependencies": {
-    "ng-zorro-antd": "^11.0.0"
+    "tslib": "^2.0.0",
+    "merge": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/common": "^11.0.0",
-    "@angular/core": "^11.0.0"
+    "@angular/core": "^11.0.0",
+    "ng-zorro-antd": "^11.0.0",
+    "sweetalert2": "^10.0.0",
+    "@ngx-pwa/local-storage": "^11.0.0"
   },
   "keywords": [
     "angular",
