--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@angular/language-service": "~11.2.7",
+    "@types/d3": "^6.3.0",
     "@types/howler": "^2.2.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
