--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "esnext",
     "module": "es2020",
     "lib": [
-      "es2018",
+      "esnext",
       "dom"
     ],
     "paths": {
